[package]
name = "hylo-fix"
version = "0.1.3"
edition = "2021"
description = "Fixed-point number types"
authors = ["0xPlish <plish@hylo.so>", "Curtis McEnroe <programble@gmail.com>"]
repository = "https://github.com/hylo-so/fix"
license = "ISC"
readme = "README.md"
keywords = ["math", "fixed", "fixpoint", "anchor", "solana"]
categories = ["data-structures"]

[lib]
name = "fix"

[features]
anchor = ["dep:anchor-lang"]

[dependencies]
anchor-lang = { version = "0.29.0", optional = true }
muldiv = "1.0.1"
num-traits = "0.2.17"
typenum = { version = "1.17.0", features = ["i128"] }
