[package]
name = "hylo-fix"
version = "0.1.8"
edition = "2021"
description = "Fixed-point number types with Solana Anchor support"
authors = ["0xPlish <plish@hylo.so>", "Curtis McEnroe <programble@gmail.com>"]
repository = "https://github.com/hylo-so/fix"
license = "ISC"
readme = "README.md"
keywords = ["arithmetic", "fixed-point", "crypto", "anchor", "solana"]
categories = ["data-structures"]

[lib]
name = "fix"

[features]
anchor = ["dep:anchor-lang"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["idl-build"], optional = true }
muldiv = "1.0.1"
num-traits = "0.2.17"
paste = "1.0.14"
quote = "1.0.36"
typenum = { version = "1.17.0", features = ["i128"] }
