[package]
name = "hylo-fix"
version = "0.5.0"
edition = "2021"
description = "Fixed-point number types with Solana Anchor support"
authors = ["0xPlish <plish@hylo.so>", "Curtis McEnroe <programble@gmail.com>"]
repository = "https://github.com/hylo-so/fix"
license = "ISC"
readme = "README.md"
keywords = ["arithmetic", "fixed-point", "crypto", "anchor", "solana"]
categories = ["data-structures"]

[lib]
name = "fix"

[features]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32"
anyhow = "1.0.82"
muldiv = "1.0.1"
num-traits = "0.2.17"
paste = "1.0.14"
quote = "1.0.36"
serde = { version = "1.0.224", features = ["derive"] }
typenum = { version = "1.17.0", features = ["i128"] }
